# mindpalace

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  clippy_errors.txt  clippy_output.txt  clippy_retry.txt  future_implementation_spec.md  gaps.md  implementation_spec.md  memory_layers.md  roadmap.md  technical_spec.md
.github/workflows/: ci.yml  release.yml
crates/brain/: Cargo.toml  README.md
crates/brain/src/: lib.rs
crates/brain/tests/: e2e_memory_cycle.rs
crates/mem-bridge/: Cargo.toml  README.md
crates/mem-bridge/src/: lib.rs
crates/mem-broker/: Cargo.toml  README.md
crates/mem-broker/src/: lib.rs  tools.rs
crates/mem-compactor/: Cargo.toml  README.md
crates/mem-compactor/src/: lib.rs
crates/mem-core/: Cargo.toml  README.md
crates/mem-core/benches/: analyzer_benchmarks.rs
crates/mem-core/src/: analysis.rs  config.rs  db.rs  lib.rs  metrics.rs
crates/mem-core/tests/: integration_tests.rs  serialization.rs
crates/mem-dreamer/: Cargo.toml  README.md
crates/mem-dreamer/src/: lib.rs
crates/mem-extractor/: Cargo.toml  README.md
crates/mem-extractor/src/: lib.rs  tests.rs
crates/mem-micro/: Cargo.toml  README.md
crates/mem-micro/src/: lib.rs
crates/mem-offloader/: Cargo.toml  README.md
crates/mem-offloader/src/: lib.rs
crates/mem-personality/: Cargo.toml  README.md
crates/mem-personality/src/: lib.rs
crates/mem-planner/: Cargo.toml
crates/mem-planner/src/: lib.rs
crates/mem-resilience/: Cargo.toml  README.md
crates/mem-resilience/src/: lib.rs
crates/mem-retriever/: Cargo.toml  README.md
crates/mem-retriever/src/: lib.rs
crates/mem-retriever/tests/: hardening.rs
crates/mem-session/: Cargo.toml  README.md
crates/mem-session/src/: lib.rs
crates/mem-viewer/: Cargo.toml
crates/mem-viewer/src/: server.rs
docs/: CONFIGURATION.md
monitoring/: grafana-dashboard.json
