[workspace]
resolver = "2"

members = [
    "crates/mem-core",
    "crates/mem-offloader",
    "crates/mem-micro",
    "crates/mem-session",
    "crates/mem-compactor",
    "crates/mem-extractor",
    "crates/mem-dreamer",
    "crates/mem-bridge",
    "crates/brain",
    "crates/mem-retriever",
    "crates/mem-resilience",
    "crates/mem-broker",
    "crates/mem-personality",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
authors = ["MindPalace Authors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
fs4 = "0.8" # For PID-level locking
sha2 = "0.10" # For content addressing
futures = "0.3"
async-trait = "0.1"
tempfile = "3.8"
chrono = "0.4"
zstd = "0.13"
uuid = { version = "1.6", features = ["v4", "serde"] }
prometheus = "0.13"
ollama-rs = { version = "0.2", features = ["stream"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
futures-util = "0.3"
async-stream = "0.3"
ruvector-core = "0.1"
ruvector-graph = "0.1"
tiktoken-rs = "0.9"
tracing-subscriber = "0.3"
aes-gcm = "0.10"
rand = "0.8"
