[package]
name = "mem-broker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mem-core = { path = "../mem-core" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
fs4.workspace = true
