[package]
name = "mem-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "fs"] }
async-trait.workspace = true
zstd.workspace = true
tokio-retry = "0.3"
uuid.workspace = true
prometheus.workspace = true
ollama-rs.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
futures-util.workspace = true
async-stream = "0.3"
tiktoken-rs.workspace = true
ruvector-graph.workspace = true
