[package]
name = "mem-core"
version = "0.2.2"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "fs"] }
async-trait.workspace = true
aes-gcm.workspace = true
rand.workspace = true
zstd.workspace = true
tokio-retry = "0.3"
uuid.workspace = true
prometheus.workspace = true
ollama-rs.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
futures-util.workspace = true
async-stream = "0.3"
tiktoken-rs.workspace = true
ruvector-graph.workspace = true
regex.workspace = true
once_cell.workspace = true
tracing.workspace = true
moka = { version = "0.12.15", features = ["future"] }
