[package]
name = "mem-offloader"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mem-core = { path = "../mem-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
