[package]
name = "mem-planner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mem-core = { path = "../mem-core" }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true
