[package]
name = "mem-retriever"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mem-core = { path = "../mem-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
ruvector-core.workspace = true
ruvector-graph.workspace = true

[dev-dependencies]
tempfile.workspace = true
