[package]
name = "mem-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mem-core = { path = "../mem-core" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
